--- a/client/bower.json
+++ b/client/bower.json
@@ -22,7 +22,8 @@
     "angular-ui-router": "0.2.x",
     "checklist-model": "0.9.x",
     "x2js":"1.2.x",
-    "ngstorage": "0.3.x"
+    "ngstorage": "0.3.x",
+    "angular-jwt": "0.0.x"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
